# tokimo-package-sandbox

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  cowork.md  cowork2.md
.github/workflows/: ci.yml  release-rootfs.yml  release.yml  vm-base.yml  vm-image.yml  vm.yml
crates/tokimo-sandbox-svc/: Cargo.toml
crates/tokimo-sandbox-svc/src/: main.rs
docs/: 2026-04-30-macos-test-fixes.md  api.md  cowork-networking-reverse-engineering.md  db-as-filesystem.md  macos-testing.md  multi-user-workspace-plan.md  network-allow-all-failure-investigation.md  network-observability.md  windows-architecture.md  windows-test-status.md
docs/init/: linux.md  windows.md
examples/: basic.rs  concurrent_oneshot.rs  dynamic_mount.rs  edge_cases.rs  gated_network.rs  hv_smoke.rs  init_smoke.rs  kill_job.rs  l4_observer.rs  network_check.rs  parallel_in_session.rs  pty_shell.rs  pty_smoke.rs  rm_rf_test.rs  session.rs  shell.rs  smoke.rs  smoltcp_netstack.rs  torture_test.rs  vz_multi_mount.rs  vz_smoke.rs
packaging/vm-base/: README.md  build.sh  init.sh  vsock9p.c
packaging/vm-image/: README.md  build.sh  docker-modify.sh  init.sh
packaging/vm-image/extras/: tun.ko.xz
packaging/vm-image/scripts/: fetch-generic-kernel.sh  rebake-initrd.sh  repack-initrd.sh
packaging/vm-local/: build-in-docker.sh  build-init-bin.sh  init.sh  vsock9p.c
packaging/vm/scripts/: rebake-initrd.sh  repack-initrd.sh
packaging/windows/: AppxManifest.xml
plan/: architecture-alignment.md  command-implementation-details.md  cowork-alignment.md  cross-platform-fuse-vfs.md  macos-nfs-mount.md  phase-2-status.md  pty-api-cross-platform.md  vhdx-differencing-disk.md  windows-fuse-migration.md  windows-service-upgrade.md
plan/done/: macos-nfs-mount.md
rootfs/: .gitignore  Dockerfile  build.sh  docker-modify.sh  enter.sh
scripts/: admin-run.ps1  build-msix.ps1  build-vm-local.ps1  check-env.ps1  ci-wait-and-test.sh  enter-sandbox.ps1  fetch-vm.ps1  fix-permissions.ps1  macos-codesign-examples.sh  rebake-arm64-initrd-inside-docker.sh  rebake-arm64-initrd.sh  rebake-initrd.ps1  setup-windows-artifacts.ps1  tail-vm-console.ps1  test-integration.ps1
scripts/linux/: fetch-vm.sh  rebake-arm64-initrd-inside-docker.sh  rebake-arm64-initrd.sh
scripts/macos/: codesign-and-run.sh
scripts/windows/: build-msix.ps1  build-vm-local.ps1  fetch-vm.ps1  rebake-initrd.ps1  test-integration.ps1
scripts/wsl/: 01-inspect-claude.sh  01b-inspect-deep.sh  02-build-rootfs.sh  install-deps.sh
src/: any_init.rs  api.rs  backend.rs  common.rs  config.rs  diagnostics.rs  error.rs  ifreq.rs  init_client.rs  init_protocol.rs  init_wire.rs  lib.rs  linux.rs  macos.rs  net_constants.rs  net_observer.rs  platform.rs  profile.rs  pty.rs  raw_io.rs  result.rs  seccomp.rs  session.rs  session_registry.rs  shared_backend.rs  svc_protocol.rs  util.rs  vfs_backend.rs  vfs_impls.rs  vm_dir.rs  vsock_util.rs  windows.rs  workspace.rs
src/host/: common.rs  mod.rs  net_observer.rs  pty.rs
src/init/: child.rs  main.rs  pty.rs  server.rs
src/init_client/: mod.rs
src/l4/: ebpf.rs  mod.rs  seccomp_notify.rs  seccomp_trace.rs
src/linux/: bridge.rs  init_client.rs  init_transport.rs  mod.rs  sandbox.rs
src/linux/l4/: mod.rs  seccomp_notify.rs  seccomp_trace.rs
src/macos/: init_transport.rs  mod.rs  nfs.rs  sandbox.rs  vm.rs  vsock_init_client.rs  vz.rs  vz_session.rs  vz_vsock.rs
src/netstack/: host_dns.rs  mod.rs
src/netstack/icmp/: imp_unix.rs  imp_windows.rs  mod.rs
src/protocol/: mod.rs  types.rs  wire.rs
src/svc/: main.rs
src/vfs_host/: id_table.rs  mod.rs
src/vfs_protocol/: handshake.rs  mod.rs  wire.rs
src/windows/: client.rs  hcs.rs  hv.rs  init_client.rs  init_transport.rs  mod.rs  ov_pipe.rs  protocol.rs  safe_path.rs  sandbox.rs  session.rs
src/windows/svc/: client.rs  mod.rs
src/workspace/: any_init.rs  mod.rs
tests/: README.md  agent_sandbox_replica.rs  multi_mount.rs  sandbox_integration.rs  session.rs  spawn_capture.rs  vz_multi_mount.rs  vz_session.rs  vz_workspace.rs  windows_run.rs  workspace.rs
tests/common/: mod.rs
