[package]
name = "tokimo-package-sandbox"
version = "0.1.0"
edition = "2024"
authors = ["William Chan <root@williamchan.me>"]
license = "MIT"
description = "Cross-platform native sandbox for running arbitrary commands safely. Linux (bwrap + seccomp), macOS (Seatbelt), Windows (WSL2)."
repository = "https://github.com/tokimo-lab/tokimo-package-sandbox"
homepage = "https://github.com/tokimo-lab/tokimo-package-sandbox"
documentation = "https://docs.rs/tokimo-package-sandbox"
readme = "README.md"
keywords = ["sandbox", "security", "isolation", "seccomp", "seatbelt"]
categories = ["os"]

[features]
default = []
# Opt-in eBPF L4 observer backend (currently scaffold only — see src/linux/l4/ebpf.rs).
ebpf = []

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.10"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "socket", "fs", "event", "ioctl", "term", "uio", "poll"] }
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "socket", "poll", "uio", "fs", "event", "ioctl", "term"] }
libc = "0.2"
arcbox-vz = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
mio = { version = "1", features = ["os-poll", "os-ext"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Pipes",
] }

[dev-dependencies]
tracing-subscriber = "0.3"
