[package]
name = "tokimo-package-sandbox"
version = "0.1.0"
edition = "2024"
authors = ["William Chan <root@williamchan.me>"]
license = "MIT"
description = "Cross-platform native sandbox for running arbitrary commands safely. Linux (bwrap + seccomp), macOS (Seatbelt), Windows (WSL2)."
repository = "https://github.com/tokimo-lab/tokimo-package-sandbox"
homepage = "https://github.com/tokimo-lab/tokimo-package-sandbox"
documentation = "https://docs.rs/tokimo-package-sandbox"
readme = "README.md"
keywords = ["sandbox", "security", "isolation", "seccomp", "seatbelt"]
categories = ["os"]

[features]
default = []
# Opt-in eBPF L4 observer backend (currently scaffold only — see src/linux/l4/ebpf.rs).
ebpf = []

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.10"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "socket", "fs", "event", "ioctl", "term", "uio", "poll"] }
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }
# Userspace network stack — same as Windows/macOS. See src/netstack/.
smoltcp = { version = "0.13", default-features = false, features = [
    "std", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp",
] }
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "socket", "poll", "uio", "fs", "event", "ioctl", "term"] }
libc = "0.2"
arcbox-vz = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
mio = { version = "1", features = ["os-poll", "os-ext"] }
# Userspace network stack — same as Windows. See src/netstack/.
smoltcp = { version = "0.13", default-features = false, features = [
    "std", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp",
] }
crossbeam-channel = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Security_WinTrust",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
] }
windows-service = "0.8"
# Userspace network stack (replaces HCN NAT for NetworkPolicy::AllowAll).
# See plan/cowork-networking-reverse-engineering.md and
# docs/network-allow-all-failure-investigation.md for the rationale.
smoltcp = { version = "0.13", default-features = false, features = [
    "std", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp",
] }
crossbeam-channel = "0.5"

[[bin]]
name = "tokimo-tun-pump"
path = "src/bin/tokimo-tun-pump/main.rs"

[dev-dependencies]
tracing-subscriber = "0.3"
smoltcp = { version = "0.13", default-features = false, features = [
    "std", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp",
] }
crossbeam-channel = "0.5"
