[package]
name = "tokimo-sandbox-svc"
version = "0.1.0"
edition = "2021"
authors = ["William Chan <root@williamchan.me>"]
license = "MIT"
description = "Windows SYSTEM service for HCS VM management — part of tokimo-package-sandbox"
repository = "https://github.com/tokimo-lab/tokimo-package-sandbox"
readme = "README.md"

[dependencies]
serde_json = "1"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_HostComputeSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_System_Threading",
] }
